<resources>
    <string name="app_name">DCC196-Trb03</string>
    <string name="hint_NomeLista">Nome da Lista</string>
    <string name="hint_NomeItem">Nome do Item</string>
    <string name="hint_Qtd">Quantidade</string>
    <string name="hint_DataLista">Data da lista</string>
    <string name="hint_NomeMercado">Nome do mercado</string>
    <string name="hint_ValorItem">Opcional (Valor do item)</string>
    <string name="hint_NomeCompra">Nome da Compra</string>
    <string name="hint_DataCompra">Data da Compra</string>
    <string name="hint_ValorCompra">Valor (Ex: 1.30)</string>
</resources>
